# restapi_with_postgres

./: .env.example  Cargo.toml  README.md  docker-compose.yaml  dockerfile
migration/: 01_sql.sql  02_slow_data.sql
src/: main.rs
