[package]
name = "TrainRust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
local-ip-address = "0.6.13"
redis = { version = "1.3.0", features = ["aio", "json", "tokio-comp"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["full"] }

[[bin]]
name = "TrainRust"
path = "src/main.rs"
